Many format fixes

--- a/Caza/conejotomate.tex
+++ b/Caza/conejotomate.tex
@@ -1,11 +1,13 @@
 %revisar
 \subsection{Conejo con salsa de tomate}
 \title{Conejo con salsa de tomate}
+\dline
 \leftbgpic{Caza/conejotomate}
 \begin{info}
 Raciones: 6 personas \\
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{1 conejo troceado}
  \item{2 ajos}
@@ -19,7 +21,7 @@ Raciones: 6 personas \\
 \end{ingredients}
 
 \recipesection{Realización}
-
+\dline
 \step{1.}{
 Freír el conejo con sal y pimienta y reservar.
 }
@@ -27,11 +29,11 @@ Freír el conejo con sal y pimienta y reservar.
 Para la salsa de tomate, picar y pochar la cebolla
  finita añadir los tomates
  partidos y pelados, la sal y el azúcar,
- el orégano , cuando este 1 hora
+ el orégano, cuando este 1 hora
  aproximadamente agregar el vino y dejar
  ½ hora más.
  }
  \step{3.}{
  Pasar la salsa por el pasapuré e
- incorporar el conejo , dejarlo 10 minutos más y servir.
+ incorporar el conejo, dejarlo 10 minutos más y servir.
 }
