--- a/Cerdo/chuletas_riojana.tex
+++ b/Cerdo/chuletas_riojana.tex
@@ -1,11 +1,13 @@
 \subsection{Chuletas de cerdo a la riojana}
 \title{Chuletas de cerdo a la riojana}
 \dline
+\leftbgpic{Cerdo/ChuletasRiojana}
 \begin{info}
  Raciones: 4 personas \\
  Tiempo de elaboración: 1h30
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{4 Chuletas de cerdo}
 \item{1 cebolla grande}
@@ -18,6 +20,7 @@
 \item{Pimienta}
 \item{(Opcional) 3 ó 4 pimientos de piquillo}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
