--- a/Cerdo/costillas.tex
+++ b/Cerdo/costillas.tex
@@ -1,12 +1,14 @@
 %revisar
 \subsection{Costillas a la barbacoa}
 \title{Costillas a la barbacoa}
+\dline
 \leftbgpic{Cerdo/Costillas}
 \begin{info}
  Raciones: 8 personas
 \end{info}
 \recipesection{Ingredientes}
 \begin{ingredients}
+\dline
 \item{2 kg de costillas de cerdo en 2 trozos aproximadamente}
 \item{Sal}
 \item{4 ó 5 dientes de Ajo}
@@ -17,8 +19,9 @@
 \item{2 cucharadas de mostaza}
 \item{2 cucharadas de miel}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Machaca los ajos con el vino, el orégano y
 1 cucharadita de sal.
