--- a/Salsas/bechamel.tex
+++ b/Salsas/bechamel.tex
@@ -1,8 +1,9 @@
 %revisar
 \subsection{Salsa Bechamel}
 \title{Salsa Bechamel}
-\newline
+\dline
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{90g de harina}
 \item{90g de mantequilla}
@@ -10,7 +11,9 @@
 \item{Sal}
 \item{Nuez moscada}
 \end{ingredients}
+
 \recipesection{Realización}
+\dline
 \step{1.}{
 Pon la mantequilla en una cazuela, cuando esta derretida agregar la harina
  e ir removiendo con una cuchara de madera o con una varilla para que se dore un poco.
