--- a/Vacuno/estofadobuey.tex
+++ b/Vacuno/estofadobuey.tex
@@ -1,11 +1,14 @@
 %revisar
 \subsection{Estofado de buey}
 \title{Estofado de buey}
+\dline
 \begin{info}
 Raciones: 6 personas \\
 Tiempo: ?
 \end{info}
+\\
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{1,5 Kg de Morcillo de buey}
  \item{1 cebolla grande}
@@ -19,7 +22,9 @@ Tiempo: ?
  \item{Agua}
  \item{0.3 kg de patatas (opcional)}
 \end{ingredients}
+
 \recipesection{Realización}
+\dline
 \step{1.}{
 Corta las verduras y ponlas a pochar en aceite.
 }
