--- a/entrantes/alitaspollo.tex
+++ b/entrantes/alitaspollo.tex
@@ -1,20 +1,24 @@
 %revisar
 \subsection{Alitas de pollo al ajillo}
 \title{Alitas de pollo al ajillo}
+\dline
 \leftbgpic{entrantes/alitaspollo}
 \begin{info}
  Raciones: x personas
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{10 alitas de pollo}
 \item{Aceite}
 \item{Sal y pimienta}
 \item{4 dientes de ajo laminados}
-\item{1 vasito de ajo laminados. Vino blanco?}
+\item{1 vasito de vino blanco}
+\item{2 cucharadas de vinagre}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Freír las alas hasta que estén
 doradas y reservar.}
