--- a/entrantes/croquetasbacalao.tex
+++ b/entrantes/croquetasbacalao.tex
@@ -1,12 +1,13 @@
 %revisar
 \subsection{Croquetas de bacalao}
 \title{Croquetas de bacalao}
+\dline
 \leftbgpic{entrantes/croquetasbacalao}
 \begin{info}
  Raciones: 5 personas
 \end{info}
-
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{250g de bacalao}
 \item{60g de mantequilla}
@@ -15,8 +16,9 @@
 \item{Pan rallado}
 \item{1 Huevo}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Poner el bacalao a hervir con un poco de agua ,
 cuando empiece a hervir apartas enseguida , dejar
