--- a/entrantes/ensaladilla.tex
+++ b/entrantes/ensaladilla.tex
@@ -1,12 +1,14 @@
 %revisar
 \subsection{Ensaladilla rusa}
 \title{Ensaladilla rusa}
+\dline
 \leftbgpic{entrantes/ensaladilla2}
 \begin{info}
  Raciones: 5 ó 6 personas \\
  Tiempo de elaboración: 45 minutos
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{1 kg de patatas}
 \item{5 huevos}
@@ -18,7 +20,9 @@
 \item{1 lata pequeña de Ppmiento morrón}
 \item{3 ó 4 zanahorias}
 \end{ingredients}
+
 \recipesection{Realización}
+\dline
 \step{1.}{
 Cuece las patatas sin pelar junto con los 4 huevos y un poco de sal,
  pínchalas con un tenedor para saber cuándo están tiernas.
