--- a/entrantes/huevosrellenos.tex
+++ b/entrantes/huevosrellenos.tex
@@ -1,6 +1,7 @@
 %revisar
 \subsection{Huevos rellenos}
 \title{Huevos rellenos}
+\dline
 \leftbgpic{entrantes/huevosrellenos}
 \begin{info}
  Raciones: 4 personas \\
@@ -16,6 +17,7 @@
 \item{Tomate frito}
 \item{1 pimiento morrón o de piquillo (opcional)}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
