--- a/entrantes/salmorejo.tex
+++ b/entrantes/salmorejo.tex
@@ -1,12 +1,14 @@
 %revisar
 \subsection{Salmorejo}
 \title{Salmorejo}
+\dline
 \leftbgpic{entrantes/salmorejo}
 \begin{info}
- Raciones: ?? personas
+ Raciones: 4 personas
 \end{info}
 \recipesection{Ingredientes}
 \begin{ingredients}
+\dline
 \item{4 o 5 ajos}
 \item{1,5 kg de tomates maduros muy rojos}
 \item{\nicefrac{1}{2} barra de pan candeal}
@@ -16,8 +18,9 @@
 \item{2 huevos cocidos picados finitos}
 \item{Jamón serrano picado finito}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Emulsiona el aceite con los ajos usando la batidora.
 Échalo a un cuenco
