--- a/entrantes/vichyssoise.tex
+++ b/entrantes/vichyssoise.tex
@@ -1,12 +1,14 @@
 %20:34
 \subsection{Vichyssoise}
 \title{Vichyssoise}
+\dline
 \leftbgpic{entrantes/Vichyssoise2}
 \begin{info}
  Raciones: 10 personas \\
  Tiempo de preparación: 1 hora
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{1 cebolla grande}
  \item{4 puerros (solo la parte blanca)}
@@ -16,8 +18,9 @@
 \item{1 litro de leche (aproximadamente)}
 \item{200g de nata para cocinar}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 En una cacerola poner la mantequilla a deretir y pochar la
 cebolla y el puerro.
