--- a/legumbres/lentejas.tex
+++ b/legumbres/lentejas.tex
@@ -7,6 +7,7 @@
  Raciones; 6 personas
 \end{info}
 \recipesection{Ingedientes}
+\dline
 \begin{ingredients}
  \item{400g de lentejas}
  \item{\nicefrac{1}{2} cebolla}
@@ -20,6 +21,7 @@
  \item{1 chorito de aceite}
  \item{200 g de chorizo (opcional)}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
