--- a/mariscos/cigala.tex
+++ b/mariscos/cigala.tex
@@ -2,12 +2,13 @@
 \subsection{Cigalas con ajo, perejil, aceite y sal gorda}
 \title{Cigalas con ajo, perejil, aceite y sal gorda}
 \leftbgpic{mariscos/cigala}
-
+\dline
 \begin{info}
 .
 \end{info}
 
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{Cigalas}
 \item{Ajo}
@@ -15,8 +16,9 @@
 \item{Aceite}
 \item{Sal gorda}
 \end{ingredients}
-\recipesection{Realizacion}
 
+\recipesection{Realizacion}
+\dline
 \step{1.}{
 Se abren las cigalas con una tijerita y se espolvorean con el ajo y prejil
 picado, un chorro de aceite y sal.
