--- a/pasta/canelones.tex
+++ b/pasta/canelones.tex
@@ -2,11 +2,13 @@
 \subsection{Canelones}
 \title{Canelones}
 \leftbgpic{pasta/canelones}
+\dline
 \begin{info}
  Raciones: 4 personas \\
  Tiempo: 40 minutos
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{Pasta de canelones (16 planchas)}
  \item{300g de carne picada}
@@ -21,6 +23,7 @@
  \item{1 pizca de nuez moscada}
  \item{Queso rallado para gratinar}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
