--- a/pasta/ensaladapasta.tex
+++ b/pasta/ensaladapasta.tex
@@ -1,10 +1,12 @@
 \subsection{Ensalada de pasta}
 \title{Ensalada de pasta}
 \leftbgpic{pasta/ensaladapasta1}
+\dline
 \begin{info}
 Raciones: 6 personas \\
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{\nicefrac{1}{2} kg de pasta (lacitos o espirales) }
  \item{300g de jamón de york en dados}
@@ -16,14 +18,14 @@ Raciones: 6 personas \\
  \item{100g de nueces partidas en trocitos}
  \item{300g de salsa rosa (o salsa coctel)}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Cuece la pasta en abundante agua con sal
 (Tiempo que marque el fabricante), enfriar.
 }
 \step{2.}{
-Mezclas la pasta con los el resto de los ingredientes,
-mezclar bien y enfriar en el frigorífico, puedes añadir
+Mezcla la pasta con el resto de los ingredientes y enfriar en el frigorífico, puedes añadir
  pasas de corinto.
 }
