--- a/pasta/espaguetis.tex
+++ b/pasta/espaguetis.tex
@@ -7,6 +7,7 @@ Raciones: 5 personas \\
 Tiempo de preparación: 1 hora
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{\nicefrac{1}{2} kg de espaguetis}
  \item{\nicefrac{1}{2} kg de carne picada previamente salpimentada}
@@ -19,6 +20,7 @@ Tiempo de preparación: 1 hora
  \item{Albaca}
  \item{100 g de queso mozzarella}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
