--- a/pasta/lasana.tex
+++ b/pasta/lasana.tex
@@ -2,10 +2,12 @@
 \subsection{Lasaña de Jamón de York con Queso gratinada con Parmesano}
 \title{Lasaña de Jamón de York con Queso gratinada con Parmesano}
 \leftbgpic{pasta/lasana_jamon1}
+\dline
 \begin{info}
  Raciones: 8 personas
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{Salsa de Tomate}
  \item{16 Lonchas de Jamón de York}
@@ -13,8 +15,9 @@
  \item{1L de Bechamel}
  \item{24 Láminas de canelones}
 \end{ingredients}
-\recipesection{Realización}
 
+\recipesection{Realización}
+\dline
 \step{1.}{
 Cocemos la pasta según fabricante. Escurrimos y dejamos secar en un paño limpio
 }
