--- a/postres/tartamanzana.tex
+++ b/postres/tartamanzana.tex
@@ -1,11 +1,13 @@
 %revisar
 \subsection{Tarta de Manzana}
 \title{Tarta de Manzana}
+\dline
 \leftbgpic{postres/tartamanzana}
 \begin{info}
 Raciones: 4 personas
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{6 huevos}
  \item{250g de harina}
@@ -16,7 +18,9 @@ Raciones: 4 personas
  \item{3 manzanas}
 %  \item{3 cucharadas de azúcar glas}
 \end{ingredients}
+
 \recipesection{Realización}
+\dline
 \step{1.}{
 Batir los huevos con el azúcar
  hasta obtener una pasta suave
