--- a/postres/torrijas.tex
+++ b/postres/torrijas.tex
@@ -8,6 +8,7 @@
 %12:07
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{1 litro de leche}
 \item{12-14 cucharadas de azúcar}
@@ -16,6 +17,7 @@
 \item{1 barra de pan de torrijas}
 \item{2-3 huevos}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
