--- a/verduras/Pimientos.tex
+++ b/verduras/Pimientos.tex
@@ -1,6 +1,7 @@
 %revisar
 \subsection{Pimientos rellenos}
-\title{Pimientos rellenos}
+\title{Pimientos relle-\\nos}
+\dline
 \leftbgpic{verduras/pimientosrellenos2}
 \begin{info}
 Raciones: 4 personas \\
@@ -22,6 +23,7 @@ Tiempo de elaboración: 1h \\ 15 minutos
  \item{Sal}
  \item{Nuez moscada para aromatizar}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
