--- a/verduras/pistocastellano.tex
+++ b/verduras/pistocastellano.tex
@@ -1,12 +1,14 @@
 %revisar
 \subsection{Pisto Castellano}
 \title{Pisto Castellano}
+\dline
 \leftbgpic{verduras/pistocastellano}
 \begin{info}
  Raciones: 4 ó 5 personas \\
  Tiempo de elaboración: 1 hora
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{1 kg de cebolla}
  \item{3 ó 6 tomates triturados(rallados)}
@@ -17,6 +19,7 @@
  \item{Aceite}
  \item{Sal}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
