--- a/verduras/potajegarbanzos.tex
+++ b/verduras/potajegarbanzos.tex
@@ -2,9 +2,10 @@
 \title{Potaje de garbanzos}
 \dline
 \begin{info}
-4 ó 5 personas
+Raciones: 4 ó 5 personas
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
 \item{1 cebolla}
 \item{1 ajo}
@@ -14,6 +15,7 @@
 \item{1/2 kilo de espinacas}
 \item{1 cucharadita de pimentón}
 \end{ingredients}
+
 \recipesection{Realización}
 \dline
 \step{1.}{
