--- a/verduras/purrusalda.tex
+++ b/verduras/purrusalda.tex
@@ -3,7 +3,7 @@
 \leftbgpic{verduras/Purrusalda.jpg}
 \dline
 \begin{info}
- Raciones: 4-5 personas \
+ Raciones: 4-5 personas \\
 %10:12
  Tiempo de preparación: 1 hora 15 minutos
 \end{info}
@@ -19,6 +19,7 @@
 \item{lomo de bacalao}
 \item{1 cayena}
 \end{ingredients}
+
 \recipesection{Realizacion}
 \dline
 \step{1.}{
