--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 % arara: clean: {files: [main.aux, main.log, main.out,main.toc, main.pdf]}
 % arara: pdflatex: {shell: yes}
 % arara: pdflatex: {shell: yes}
+% arara: pdflatex: {shell: yes}
 % arara: clean: {files: [main.aux, main.log, main.out,main.toc]}
 
 
