--- a/pasta/lasanacarne.tex
+++ b/pasta/lasanacarne.tex
@@ -1,5 +1,6 @@
 \subsection{Lasaña de Carne}
 \title{Lasaña de Carne}
+\dline
 \leftbgpic{pasta/lasana_carne_1}
 \begin{info}
  Raciones: 5-6 personas \\
@@ -18,6 +19,7 @@
 \item{Sal}
 \item{Pimienta}
 \end{ingredients}
+
 \recipesection{Realizacion}
 \dline
 \step{1.}{
