--- a/Cerdo/costillas.tex
+++ b/Cerdo/costillas.tex
@@ -1,8 +1,7 @@
-%revisar
 \subsection{Costillas a la barbacoa}
 \title{Costillas a la barbacoa}
 \dline
-\leftbgpic{Cerdo/Costillas}
+\leftbgpic{Cerdo/Costillas1}
 \begin{info}
  Raciones: 8 personas
 \end{info}
@@ -28,7 +27,7 @@ Machaca los ajos con el vino, el orégano y
 }
 \step{2.}{
 Adoba las costillas y
-dejalas en reposo 1 hora. Calienta el horno a 200ºC.
+dejalas en reposo 1 hora. Calienta el horno a 180ºC.
 }
 \step{3.}{
 En la túrmix bate la coca cola con el kétchup, la mostaza
