--- a/Vacuno/estofadobuey.tex
+++ b/Vacuno/estofadobuey.tex
@@ -2,9 +2,10 @@
 \subsection{Estofado de buey}
 \title{Estofado de buey}
 \dline
+\leftbgpic{Vacuno/estofadobuey1b}
 \begin{info}
 Raciones: 6 personas \\
-Tiempo: ?
+Tiempo: 2h 30min
 \end{info}
 \\
 \recipesection{Ingredientes}
@@ -20,25 +21,30 @@ Tiempo: ?
  \item{Sal y pimienta}
  \item{Laurel}
  \item{Agua}
- \item{0.3 kg de patatas (opcional)}
+ \item{2 patatas medianas (opcional)}
 \end{ingredients}
 
 \recipesection{Realización}
 \dline
 \step{1.}{
-Corta las verduras y ponlas a pochar en aceite.
+Corta las verduras y ponlas a pochar en aceite e incorporar el tomate rallado.
 }
+\dline
 \step{2.}{
 Corta la carne en trozos  e incorpórala a las
- verduras , rehoga durante 10 minutos y cúbrela
+ verduras, rehoga durante 10 minutos y cúbrela
  con el vino tinto.
  }
+ \dline
  \step{3.}{
- Ponlo a cocer lentamente
- durante 2 horas aproximadamente , añadiendo
- agua si lo necesita. Comprueba que este tierna
+ Dejar cocer lentamente
+ durante 2 horas aproximadamente, añadiendo
+ agua si lo necesita. Comprueba que la carne este tierna
  y si es necesario cuece un poco más sin dejar
- que se seque. Añade 0,5 kilos de patatas
+ que se seque.
+ }
+ \dline
+ \step{4.}{Añadir las patatas cortadas en cuadrados
  (opcional) y deja cocer 1/4 de hora más y servir.
 }
-\pic{Vacuno/estofadobuey}
+
