--- a/entrantes/croquetasbacalao.tex
+++ b/entrantes/croquetasbacalao.tex
@@ -2,7 +2,7 @@
 \subsection{Croquetas de bacalao}
 \title{Croquetas de bacalao}
 \dline
-\leftbgpic{entrantes/croquetasbacalao}
+\leftbgpic{entrantes/croquetasbacalao1b}
 \begin{info}
  Raciones: 5 personas
 \end{info}
@@ -20,21 +20,25 @@
 \recipesection{Realización}
 \dline
 \step{1.}{
-Poner el bacalao a hervir con un poco de agua ,
-cuando empiece a hervir apartas enseguida , dejar
-enfriar.}
+Poner el bacalao a hervir con un poco de agua,
+cuando empiece a hervir apartas enseguida, dejar
+enfriar o utilizar bacalao desmigado y desalado y hacer en sartén o microondas.}
+\dline
 \step{2.}{
 Limpiarlo de espinas y desmenuzarlo. Picarlo
 finito y reservar.
 }
+\dline
 \step{3.}{
 En una sartén poner la mantequilla a derretir y agregar la harina.
 Y sin dejar de remover incorporar la leche caliente y remover hasta que
 se haga una bechamel e incorporar bacalao.
 }
+\dline
 \step{4.}{
 Extender la masa en una fuente y dejar enfriar.
 }
+\dline
 \step{5.}{
 Formar las croquetas, pásalas por huevo y pan
  rallado , freír en aceite fuerte y servir
