--- a/main.tex
+++ b/main.tex
@@ -21,13 +21,15 @@
 \renewcommand{\newline}{\hfill \break}
 \newcommand{\dline}{\newline \newline}
 \makecontents
-
+Test
 \pagestyle{recipe}
 \section{Aves}
 \input{Aves/polloasado}
 \input{Aves/pollopepitoria}
 \input{Aves/jamoncitospollo}
+\input{Aves/codornices}
 \input{entrantes/alitaspollo}
+%codornices escabechadas
 \section{Caza}
 \input{Caza/conejotomate}
 \section{Cerdo}
@@ -58,11 +60,13 @@
 \section{Pescados}
 \input{pescados/atun_tomate}
 \input{pescados/bacalao_tomate}
+%boquerones escabechados
 \section{Platos únicos}
 \input{platosunicos/cocido}
 \input{platosunicos/patataschirlas}
 \input{platosunicos/patatascostillas}
 \input{platosunicos/arroz_bacalao}
+%patatas a la importancia.
 \section{Platos típicos}
 \input{platostipicos/migas}
 \section{Postres}
@@ -70,10 +74,13 @@
 \input{postres/torrijas}
 \section{Salsas}
 \input{Salsas/bechamel}
+%Salsa romanescu
+%Salsa tartara
 \section{Vacuno}
 \input{Vacuno/albondigas}
 \input{Vacuno/estofadobuey}
 \input{Vacuno/Terneraasada}
+%lengua
 \section{Verduras}
 \input{verduras/pastellesparagos}
 \input{verduras/Pimientos}
@@ -85,5 +92,4 @@
 \clearpage
 \end{document}
 %codornices
-%bacalao con tomate
 %boquerones en escabeche
