--- a/Aves/pollopepitoria.tex
+++ b/Aves/pollopepitoria.tex
@@ -26,10 +26,15 @@ Tiempo de preparación: 1 hora
 Salpimentar el pollo, enharinar y sellarlo en una sarten y reservar.
 }
 \step{2.}{
-En el mismo aceite, pochar la cebolla y 3 dientes de ajo. Una vez pochado, añadir una cucharadita de
-harina, tostar un poquito y añadir un majado con las almendras, 1 ajo, vino blanco y perejil. Dejar evaporar
-un poco el vino, añadir el pollo y cubrir con agua y una pastilla de caldo de pollo.
+En el mismo aceite, pochar la cebolla y 3 dientes de ajo.
 }
 \step{3.}{
+Una vez pochado, añadir una cucharadita de
+harina, tostar un poquito y añadir un majado con las almendras, 1 ajo, vino blanco y perejil.
+}
+\step{4.} {Dejar evaporar
+un poco el vino, añadir el pollo y cubrir con agua y una pastilla de caldo de pollo.
+}
+\step{5.}{
 Añadir el huevo picado y dejar cocer aproximadamente 3/4 de hora a fuego lento.
 }
