--- a/Aves/codornices.tex
+++ b/Aves/codornices.tex
@@ -3,7 +3,7 @@
 \dline
 \begin{info}
 Raciones: 4 personas \\
-Tiempo de preparación: 1h 30min
+Tiempo de preparación: 1h 30min \\
 \end{info}
 \recipesection{Ingredientes}
 \dline
@@ -27,15 +27,19 @@ Tiempo de preparación: 1h 30min
 \step{1.}{
 Limpiar las codornices de posibles plumas
 }
+\dline
 \step{2.}{
 Salpimentar y dorar en una olla. Retirar
 }
+\dline
 \step{3.}{
 En ese aceite, pochar un cebolla en dados, 3 ajos laminados, el puerro y las zanahorias
 }
+\dline
 \step{4.}{
 Una vez pochado, añadir las codornices, el vaso de vino blanco, el vinagre, el agua, las 2 hojas de laurel, las ramas de tomillo, el resto de ajos y los granos de pimienta.
 }
+\dline
 \step{5.}{
 Dejar cocer aproximadamente unos 45 minutos.
 }
