--- a/Aves/jamoncitospollo.tex
+++ b/Aves/jamoncitospollo.tex
@@ -25,9 +25,11 @@ Tiempo de preparación: 1h30 min
 \step{1.}{
 Salpimentar los muslos de pollo y dorar en una cazuella con aceite. Retirar y reservar
 }
+\dline
 \step{2.}{
 En ese aceite, pochar la cebolla cortada en juliana y el ajo.
 }
+\dline
 \step{3.}{
 Añadir los muslos de pollo, el vaso de vino blanco, el agua y las 2 cucharadas de vinagre.
 Dejar cocer a fuego lento, aproximadamente entre 45 minutos/1 hora.
