--- a/Aves/pollopepitoria.tex
+++ b/Aves/pollopepitoria.tex
@@ -25,16 +25,20 @@ Tiempo de preparación: 1 hora
 \step{1.}{
 Salpimentar el pollo, enharinar y sellarlo en una sarten y reservar.
 }
+\dline
 \step{2.}{
 En el mismo aceite, pochar la cebolla y 3 dientes de ajo.
 }
+\dline
 \step{3.}{
 Una vez pochado, añadir una cucharadita de
 harina, tostar un poquito y añadir un majado con las almendras, 1 ajo, vino blanco y perejil.
 }
+\dline
 \step{4.} {Dejar evaporar
 un poco el vino, añadir el pollo y cubrir con agua y una pastilla de caldo de pollo.
 }
+\dline
 \step{5.}{
 Añadir el huevo picado y dejar cocer aproximadamente 3/4 de hora a fuego lento.
 }
