--- a/Caza/conejotomate.tex
+++ b/Caza/conejotomate.tex
@@ -25,6 +25,7 @@ Raciones: 6 personas \\
 \step{1.}{
 Freír el conejo con sal y pimienta y reservar.
 }
+\dline
 \step{2.}{
 Para la salsa de tomate, picar y pochar la cebolla
  finita añadir los tomates
@@ -33,6 +34,7 @@ Para la salsa de tomate, picar y pochar la cebolla
  aproximadamente agregar el vino y dejar
  ½ hora más.
  }
+ \dline
  \step{3.}{
  Pasar la salsa por el pasapuré e
  incorporar el conejo, dejarlo 10 minutos más y servir.
