--- a/Cerdo/carrilleras.tex
+++ b/Cerdo/carrilleras.tex
@@ -27,14 +27,16 @@
 \step{1.}{
 Enharinar la carne previamente salpimentada y sellar en una sartén. Retirar
 }
+\dline
 \step{2.}{
 En ese aceite pochar las verduras(cebolla, zanahoria, ajos y el pimiento). Una vez pochado añadir el agua y el vino.
 Dejar evaporar un poco y añadir la carne.
 }
+\dline
 \step{3.}{
 Cerrar la olla 40 minutos.
 }
-\newline
+\dline
 \step{4.}{
 Filetear las carrilleras y pasar las verduras por la turmix
 }
