--- a/Cerdo/chuletas_riojana.tex
+++ b/Cerdo/chuletas_riojana.tex
@@ -26,15 +26,19 @@
 \step{1.}{
 Pochar la cebolla junto con los pimientos cortados en juliana.
 }
+\dline
 \step{2.}{
 Añadir \nicefrac{1}{2} vaso de vino blanco, dejar evaporar unos minutos y añadir el tomate.
 }
+\dline
 \step{3.}{
 Dejar cocer aproximadamente 20 minutos.
 }
+\dline
 \step{4.}{
 En una sartén sellar las chuletas de cerdo previamente salpimentadas y añadirlas a la riojana. Dejar cocer 5 ó 10 minutos.
 }
+\dline
 \step{5.}{
 Se le puede añadir pimientos de piquillo cortados en tiras
 }
