--- a/Cerdo/costillas.tex
+++ b/Cerdo/costillas.tex
@@ -25,15 +25,18 @@
 Machaca los ajos con el vino, el orégano y
 1 cucharadita de sal.
 }
+\dline
 \step{2.}{
 Adoba las costillas y
 dejalas en reposo 1 hora. Calienta el horno a 180ºC.
 }
+\dline
 \step{3.}{
 En la túrmix bate la coca cola con el kétchup, la mostaza
 y la miel. Unta un poco de esa salsa en las costillas
 (como 1/4 parte) y ponlas en el horno caliente media hora.
 }
+\dline
 \step{4.}{
 Dales la vuelta y echa más salsa cada 20 minutos hasta que lleve hora y media en el horno, aproximadamente.
 }
