--- a/Salsas/bechamel.tex
+++ b/Salsas/bechamel.tex
@@ -18,10 +18,12 @@
 Pon la mantequilla en una cazuela, cuando esta derretida agregar la harina
  e ir removiendo con una cuchara de madera o con una varilla para que se dore un poco.
 }
+\dline
 \step{2.}{Agregar la leche caliente poco a poco y sin dejar de
  remover con el fuego lento y mantener la cocción sin
  que hierva.
  }
+ \dline
  \step{3.}{
  Añadir la sal y la nuez moscada y dejar cocer hasta que alcance la textura
  adecuada
