--- a/Vacuno/albondigas.tex
+++ b/Vacuno/albondigas.tex
@@ -33,19 +33,19 @@ Tiempo de preparación: 1 hora
 Adobar la carne: en el vaso de la batidora, añadir dos ajos picados, un huevo, perejil, dos rebandas de pan de molde y un vaso de leche.
 Pasar por la turmix y agregarlo a la carne previamente salpimentada y amasarlo bien.
 }
-\newline
+\dline
 \step{2.}{
 Partir las zanahorias en cuadraditos pequeños y ponerlas a hervir en 1 litro de agua con una pastilla de caldo de pollo.
 }
-\newline
+\dline
 \step{3.}{
 Cortar las patatas en cuadraditos y freirlas
 }
-\newline
+\dline
 \step{4.}{
 Formar las albóndigas, enharinarlas y freirlas en el aceite de las patatas y colorcarlas en una cazuela.
 }
-\newline
+\dline
 \step{5.}{
 Picar la cebolla y pocharla en el aceite donde hemos frito las albóndigas(retirando el aceite sobrante). Mientras machaca los dos ajos
 con perejil y un vaso de vino blanco. Cuando la cebolla este pochada, añadir una cucharada de harina y el majado. Dejar evaporar un
