--- a/entrantes/almejas_marinera.tex
+++ b/entrantes/almejas_marinera.tex
@@ -23,9 +23,11 @@
 \step{1.}{
 Pochar la media cebolla y el ajo.
 }
+\dline
 \step{2.}{
 Añadir una cucharada de harina, rehogar un poquito y añadir el majado(Ajo, perejil y vino blanco machacados)
 }
+\dline
 \step{3.}{
 Añadir las almejas(Nota: las almejas ponerlas un rato en agua con un puñadito de sal para que echen la tierra y escurrir)
 y un poco de agua. Remover un poco hasta que se abran las almejas.
