--- a/entrantes/ensaladilla.tex
+++ b/entrantes/ensaladilla.tex
@@ -5,7 +5,7 @@
 \leftbgpic{entrantes/ensaladilla2}
 \begin{info}
  Raciones: 5 ó 6 personas \\
- Tiempo de elaboración: 45 minutos
+ Tiempo de elaboración: 45 min
 \end{info}
 \recipesection{Ingredientes}
 \dline
@@ -27,23 +27,28 @@
 Cuece las patatas sin pelar junto con los 4 huevos y un poco de sal,
  pínchalas con un tenedor para saber cuándo están tiernas.
  }
+ \dline
  \step{2.}{
  Aparta y enfría, mientras enfría preparas una mayonesa con
  1 huevo, el aceite, un poco  de sal y un poco de limón.
  }
+ \dline
  \step{3.}{
  Cocer las zanahorias cortadas en dados y escurrir.
  }
+ \dline
  \step{4.}{
  Pela las patatas y córtalas en daditos pequeños, agrega el bonito
  desmenuzado, las aceitunas y 3 huevos de los cocidos partidos
  pequeños  y las zanahorias.
  }
+ \dline
  \step{5.}{
  Agrega la mayonesa, remueve bien y adorna con el huevo que queda en rodajas finas,
  unas cuantas aceitunas y el pimiento morrón en tiras.
  }
- \step{6.}{ \newline
+ \dline
+ \step{6.}{
  Enfriar y servir.
 }
 
