--- a/entrantes/huevosrellenos.tex
+++ b/entrantes/huevosrellenos.tex
@@ -23,13 +23,16 @@
 \step{1.}{
 Cocer 8 huevos durante 10 minutos. Enfriar y pelar.
 }
+\dline
 \step{2.}{
 Partir por la mitad y apartar las yemas.
 }
+\dline
 \step {3.}{
 En un plato poner 6 yemas y reservar 2 para la covertura, el bonito y un poco de tomate frito.
 Aplastar con el tenedor hasta obtener una pasta homogenea para el relleno.
 }
+\dline
 \step{4.}{
 Ir rellenando los huevos y colocarlos en una fuente. Cubrir los huevos con mahonesa. Rallar las yemas
 que habiamos reservado y espolvorearlas por encima de los huevos y añadir un trocito de pimiento del
