--- a/entrantes/salmorejo.tex
+++ b/entrantes/salmorejo.tex
@@ -25,17 +25,21 @@
 Emulsiona el aceite con los ajos usando la batidora.
 Échalo a un cuenco
 }
+\dline
 \step{2.}{Tritura los tomates, pásalos
  por el chino y júntalo con el aceite.
 }
+\dline
 \step{3.}{
  Remoja el pan
  con agua, bátelo bien por la batidora y pásalo por chino.
  }
+ \dline
  \step{4.}{
  Incorporándolo todo a la cazuela, echa sal al gusto,
  bátelo bien y ponlo a enfriar.
  }
+ \dline
  \step{5.}{
 La guarnición se la  sirve cada comensal en su taza.
 }
