--- a/entrantes/vichyssoise.tex
+++ b/entrantes/vichyssoise.tex
@@ -25,15 +25,16 @@
 En una cacerola poner la mantequilla a deretir y pochar la
 cebolla y el puerro.
 }
+\dline
 \step{2.}{
 Añadir las patatas cortadas, dar un par de vueltas y añadir el caldo
 (Puede ser agua y una pastilla de avecren en su defecto).
 }
-
+\dline
 \step{3.}{
 Dejar cocer 1/2 hora aproximadamente, pasar la turmix y añadir la leche.
 }
-
+\dline
 \step{4.}{
 Por último añadirle la nata de cocinar, batir y dejar enfriar. En caso de quedar algún
 grumo pasarlo por un colador o chino.
