--- a/legumbres/fabes_almeja.tex
+++ b/legumbres/fabes_almeja.tex
@@ -29,14 +29,17 @@
 \step{1.}{
 Poner en remojo las alubias la noche anterior.
 }
+\dline
 \step{2.}{
 Poner las alubias en una olla con la zanahoria, la cebolla y una hoja de laurel, cubrir con agua
 y dejar cocer 90 minutos en la olla (Si en una olla express 40 minutos)
 }
+\dline
 \step{3.}{
 Una vez cocidas las alubias, pasar la cebolla, junto con la zanahoria por la batidora con un poco de liquido de cocer las alubias.
 Acordarse de retirar algo de caldo de la coción de la alubias para que no queden muy caldosas y añadirselo a las alubias.
 }
+\dline
 \step{4.}{
 Por otro lado, hacer las almejas a la marinera(ver receta almejas a la marinera ) y añadirselas a las alubias y dejar cocer un poco.
 }
