--- a/legumbres/garbanzos_sepia.tex
+++ b/legumbres/garbanzos_sepia.tex
@@ -26,23 +26,29 @@
 \step{1.}{
 Poner a remojo la noche anterior los garbanzos
 }
+\dline
 \step{2.}{
 Hacer un sofrito en la olla con la cebolla, el ajo, el puerro, el pimiento y
 el tomate.
 }
+\dline
 \step{3.}{
 Añadir una cucharada de tomate frito.
 }
+\dline
 \step{4.}{
 Añadir la sepia troceada y sofreir un poco.
 }
+\dline
 \step{5.}{
 Añadir un poco de vino blanco y dejar evaporar un par de minutos.
 }
+\dline
 \step{6.}{
 Añadir los garbanzos escurridos a la olla y
 cubrir de agua unos 2 dedos aproximadamente.
 }
+\dline
 \step{7.}{
 Rectificar de sal, cerrar la olla y dejar cocer 50 minutos.
 }
