--- a/mariscos/cigala.tex
+++ b/mariscos/cigala.tex
@@ -23,6 +23,7 @@
 Se abren las cigalas con una tijerita y se espolvorean con el ajo y prejil
 picado, un chorro de aceite y sal.
 }
+\dline
 \step{2.}{
 Se colocan en una bandeja de horno con la parte abierta
 hacia arriba y se meten en el horno a media altura con el
