--- a/mariscos/mejillones_picantones.tex
+++ b/mariscos/mejillones_picantones.tex
@@ -21,6 +21,7 @@
 Limpiar los mejillones. En un cazo, cocer los mejillones con un poco de agua.
 Una vez abiertos, sacar los mejillones y reservar el caldo.
 }
+\dline
 \step{2.}{
 Pochar el ajo y la cebolla.Añadir las cayenas y la cucharada de harina.
 Remover y añadir la salsa de tomate y el caldo de los mejillones hasta conseguir
