--- a/pasta/canelones.tex
+++ b/pasta/canelones.tex
@@ -30,20 +30,24 @@
 Pocha la cebolla con los ajos, incorpora la carne,
 el pate y el tomate frito y rehogarlo.
 }
+\dline
 \step{2.}{
  Pasarlo por la batidora y reservar
 }
+\dline
 \step{3.}{
  Cocer la pasta en abundante
  agua con sal y un chorrito de aceite para que no se pegue el
  tiempo que indique el fabricante, enfriar en agua fría
  y escurrir.
  }
+ \dline
  \step{4.}{
  Extender las placas sobre la mesa, rellenarlas
  con la farsa de la batidora y colocar en una bandeja untada
  con mantequilla y tomate frito.
  }
+ \dline
  \step{5.}{
  Hacer una bechamel con la
  mantequilla, la harina, la leche y la nuez moscada. Cubrir los canelones y
