--- a/pasta/ensaladapasta.tex
+++ b/pasta/ensaladapasta.tex
@@ -25,6 +25,7 @@ Raciones: 6 personas \\
 Cuece la pasta en abundante agua con sal
 (Tiempo que marque el fabricante), enfriar.
 }
+\dline
 \step{2.}{
 Mezcla la pasta con el resto de los ingredientes y enfriar en el frigorífico, puedes añadir
  pasas de corinto.
