--- a/pasta/espaguetis.tex
+++ b/pasta/espaguetis.tex
@@ -26,21 +26,27 @@ Tiempo de preparación: 1 hora
 \step{1.}{
 Cuece la pasta según fabricante
 }
+\dline
 \step{2.}{
 Para la salsa bolognesa: Picar la cebolla menuda y los ajos y rallar la zanahoria.
 }
+\dline
 \step{3.}{
 Pochalarlo en una sartén, cuando este pochado añadir los tomates y freir un poco.
 }
+\dline
 \step{4.}{
 Añadir la carne y mover hasta que pierda el color rojizo.
 }
+\dline
 \step{5.}{
 Añadir el vino blanco y dejar evaporar unos minutos y añadir tomate frito al gusto, aproximadamente un vaso.
 }
+\dline
 \step{6.}{
 Dejar cocer media hora removiendo despacio.
 }
+\dline
 \step{7.}{
 Sirve los espaguetis con la salsa y la mozzarella
 }
