--- a/pasta/lasana.tex
+++ b/pasta/lasana.tex
@@ -21,6 +21,7 @@
 \step{1.}{
 Cocemos la pasta según fabricante. Escurrimos y dejamos secar en un paño limpio
 }
+\dline
 \step{2.}{
 Ponemos una capa de tomate
 en la bandeja del horno, después ponemos una
@@ -28,6 +29,7 @@ capa de láminas de pasta, después una capa de
 lonchas de jamón y queso y untamos con tomate frito. Luego otra capa de pasta y volvemos a repetir el
 paso anterior y así hasta acabar las laminas.
 }
+\dline
 \step{3.}{
 Cubrir con bechamel y queso parmesano. Se
 mete en el horno durante aproximadamente 20
