--- a/pasta/lasanacarne.tex
+++ b/pasta/lasanacarne.tex
@@ -25,17 +25,20 @@
 \step{1.}{
 En una cacerola grande ponemos agua a hervir con sal y cocemos las placas de lasaña, según fabricante
 }
+\dline
 \step{2.}{
 Picamos la cebolla y la pochamos en la sarten con un poco de aceite.
 Añadimos la carne picada, previamente salpimentada y dejamos que se haga.
 Añadimos el vaso de vino blanco, dejamos evaporar un poco y añadimos la salsa de tomate frito.
 }
+\dline
 \step{3.}{
 En la fuente en la que vayamos a presentar la lasaña, añadimos un poco de tomate frito en el fondo y lo repartimos
 por toda la bandeja. Encima, colocamos una capa de pasta de lasaña y la cubrimos con carne picada. Cubrimos con
 otra capa de láminas de lasaña y volvemos a añadir carne picada y seguimos añadiendo hasta terminar las placas.
 Cubrir la lasaña con salsa bechamel y espolvorear con el queso rallado.
 }
+\dline
 \step{4.}{
 Introducir la lasaña en el horno a 200º hasta que se dore el queso
 }
