--- a/platosunicos/arroz_bacalao.tex
+++ b/platosunicos/arroz_bacalao.tex
@@ -27,10 +27,12 @@
 \step{1.}{
 Pochamos la cebolla y los pimientos en juliana junto con el ajo.
 }
+\dline
 \step{2.}{
 Añadimos las patatas cortadas en medallones y una cucharada de pimentón.
 Cubrimos con agua y dejamos cocer 15 minutos.
 }
+\dline
 \step{3.}{
 Añadimos el arroz y el bacalao y un majado de ajo, perijil y vino blanco
 y dejamos cocer aproximadamente 20 minutos.
