--- a/platosunicos/cocido.tex
+++ b/platosunicos/cocido.tex
@@ -31,6 +31,7 @@
 \step{1.}{
 Pon la víspera a remojar los garbanzos.
 }
+\dline
 \step{2.}{
 En una cazuela grande pon todos
  los ingredientes menos el repollo y los garbanzos.\\
@@ -38,14 +39,17 @@ En una cazuela grande pon todos
  lentamente añadiendo si hace falta agua siempre caliente a la cocción.
  Cuando empieze a hervir añadir los garbanzos en una malla.
  }
+ \dline
  \step{3.}{
  Mientras cocer el repollo y una vez cocido escurrir y rehogarlo con ajo y un poquito de pimentón.
  }
+ \dline
 \step{4.}{
 Dejar cocer aproximadamente 3 horas y probar los garbanzos.
  Cuando este cocido apartar las verduras y los garbanzos por un lado y las carnes por otro.
  Colar el caldo y hacer sopa añadiendole fideos, se le puede añadir una hoja de hierbabuena.
 }
+\dline
 \step{5.}{Servir primero la sopa, luego las
  verduras y los garbanzos y después la carne.
 }
