--- a/platosunicos/patataschirlas.tex
+++ b/platosunicos/patataschirlas.tex
@@ -27,10 +27,12 @@
 Poner las chirlas en agua con un poco de sal para que suelten la tierra en caso de tenerla.
 Pochar la cebolla, el pimiento, el ajo y el tomate, es decir, hacer un sofrito. Añadir el chorizo, y rehogar.
 }
+\dline
 \step{2.}{
 Escurir las chirlas y añadirlas al sofrito. Añadir un majado con el ajo, el perejil y el vino blanco y remover un poco hasta
 que se vayan abriendo las chrilas.
 }
+\dline
 \step{3.}{
 Cortar las patatas en cuadrados y añadirlas, cubrir con agua y dejar cocer aproximadamente 20 minutos hasta que
 las patatas esten hechas. Por último añadir los dos huevos picados.
