--- a/postres/tartamanzana.tex
+++ b/postres/tartamanzana.tex
@@ -29,11 +29,13 @@ Batir los huevos con el azúcar
  y la mantequilla derretida, incorporar
  la levadura y mezclar todo bien.
 }
+\dline
 \step{2.}{
  Pelar las manzanas y cortarlas en cuñas finas.
  Colocarlas en una tartera engrasada con
  mantequilla y enharinada.
  }
+ \dline
  \step{3.}{
  Verter encima la masa e introducir en el horno precalentado
  a 180ºC, durante 30 minutos. Terminada la
