--- a/verduras/Pimientos.tex
+++ b/verduras/Pimientos.tex
@@ -29,17 +29,21 @@ Tiempo de elaboración: 1h \\ 15 minutos
 \step{1.}{
 Hacer una bechamel con 60g de mantiquilla, 60g de harina y medio litro de leche(Ver receta).
 }
+\dline
 \step{2.}{
 Saltear el bacalao, las gambas o el relleno que se le quiera echar(Puerro, setas, ...).
 }
+\dline
 \step{3.}{
 Añadir el relleno a la bechamel y remover.
 }
+\dline
 \step{4.}{
 Para la salsa, pochar la cebolla, el ajo y el pimiento verde.
 Añadirle dos pimientos del piquillo partidos en trozos y un poco de oregano
 Una vez pochado añadir una copa de brandy. Reducir unos minutos y añadirle 5 cucharadas de tomate frito y la nata.
 }
+\dline
 \step{5.} {
 Batir la salsa.
 }
