--- a/verduras/berenjenas_rellenas.tex
+++ b/verduras/berenjenas_rellenas.tex
@@ -26,16 +26,19 @@ Lavar las berenjenas, partirlas por la mitad y hacer cortes en horizontal y vert
 horno a 180º durante 30-40 minutos hasta que la carne este tierna (Este paso también se puede hacer en el microondas reduciendo el tiempo. Se ponen en un bol y se tapan con
 papel film).
 }
+\dline
 \step{2.}{
 Una vez asadas las berenjenas dejar enfriar un poco y vaciar la carne de la berenjena con un cuchara y picarla bien.
 }
+\dline
 \step{3.}{
 En una sartén, pochar la cebolla y añadir la carne de las berenjenas y la carne picada previamente salpimentada. Dejar que se cocine, removiendo de vez en cuando y añadir la salsa de tomate.
 }
+\dline
 \step{4.}{
 Rellenar las berenjenas, cubrir de bechamel, espolvorear con el queso rallado y dorar en el horno con la opción grill unos 15 minutos a 200º.
 }
-
+\dline
 \recipesection{Notas}
 El relleno se puede sustituir por atún en aceite o solo con verduras(Champiñones, calabacín).
 Si quieres aligerar la receta en vez de bechamel puedes cubrirlo con pan rallado.
