--- a/verduras/calabacin_rebozado.tex
+++ b/verduras/calabacin_rebozado.tex
@@ -21,6 +21,7 @@
 \step{1.}{
 Cortar el Calabacín en rodajas. Añadirle sal y dejar escurir unos minutos en el colador para que echen el exceso de agua.
 }
+\dline
 \step{2.}{
 Pasar primero con harina y luego por huevo batido y freir. Dejarlos soltar el aceite en un plato con un papel absorvente.
 }
