--- a/verduras/cremaesparragos.tex
+++ b/verduras/cremaesparragos.tex
@@ -20,10 +20,12 @@
  Quitar el liquido de los esparragos y picarlos.
  Pelar las patatas y picarlas también y echar todo en una olla
 }
+\dline
 \step{2.}{
 Poner a hervir aproximadamente 20 minutos, cuando rompa a hervir echar la pastilla
 de caldo.
 }
+\dline
 \step{3.}{
 Echar el brick de nata de cocinar y triturar.
 }
