--- a/verduras/pastellesparagos.tex
+++ b/verduras/pastellesparagos.tex
@@ -21,6 +21,7 @@
 \step{1.}{
 Batir todos los ingredientes y ponerlos en un molde untado con mantequilla.
 }
+\dline
 \step{2.}{
 Meterlo en el horno al baño maria durante 40 minutos a 180º
 }
