--- a/verduras/pistocastellano.tex
+++ b/verduras/pistocastellano.tex
@@ -26,10 +26,12 @@
 Pica la cebolla menuda y ponla a pochar en una sartén, cuando
 esté casi se añade el pimiento y los ajos.
 }
+\dline
 \step{2.}{
 Añadir el calabacín cortado en dados pequeños y remover.
 Dejar unos 5 ó 10 minutos y añadir el tomate.
 }
+\dline
 \step{3.}{
 Rectificar de sal y dejar cocer hasta que el calabacín este tierno. Aproximadamente
 entre 20 minutos, media hora.
