--- a/verduras/purrusalda.tex
+++ b/verduras/purrusalda.tex
@@ -25,20 +25,20 @@
 \step{1.}{
 Pochar puerro, cebolla y zanahoria.
 }
-\newline
+\dline
 \step{2.}{
 Añadir las patatas en rodajas o tacos.
 }
-\newline
+\dline
 \step{3.}{
 Cubrir con el caldo y cocer 15 minutos
 }
-\newline
+\dline
 \step{4.}{
 Confitar el bacalao en una sarten. Retirar y hacer lastas.
 En ese aceite freir 2 ajos laminados junto con una cayena.
 }
-\newline
+\dline
 \step{5.}{
 Añadirlo a la cazuela y dejar cocer 10 minutos.
 }
