--- a/Aves/polloasado.tex
+++ b/Aves/polloasado.tex
@@ -23,19 +23,19 @@ Tiempo de preparación: 1h45 min
 \step{1.}{
 Precalentar el horno a 200ºC
 }
-\newline
+\dline
 \step{2.}{
 Salpimentar el pollo y cortar las patatas en rodajas. Pasarlo todo a una fuente con la patatas de base y el pollo con la piel hacia abajo.
 }
-\newline
+\dline
 \step{3.}{
 Agregar el vino, el agua y un chorro de aceite sobre el pollo. 
 }
-\newline
+\dline
 \step{4.}{
 Meterlo en el horno durante \nicefrac{3}{4} de hora. Darle la vuelta, regarlo con el caldo y meterlo otros \nicefrac{3}{4} de hora bajando la temperatura a 180ºC.
 }
-\newline
+\dline
 \step{5.}{
 Sacarlo del horno y servir.
 }
