--- a/Vacuno/Terneraasada.tex
+++ b/Vacuno/Terneraasada.tex
@@ -29,19 +29,19 @@ Tiempo de preparación: 1 \nicefrac{1}{4} hora
 \step{1.}{
 Salpimentar el redondo y después enharinarlo.
 }
-\newline
+\dline
 \step{2.}{
 En una olla con un poco de aceite, marcar el redondo. Retirar y reservar en una fuente.
 En la misma olla donde se ha sellado el redondo, pochar la cebolla, el puerro y la zanahoria.
 Mientras se pocha, añadir un poco de sal.
 }
-\newline
+\dline
 \step{3.}{
 Mientras se está pochando la verdura, en un mortero añadir un ajo y perejil, machacar y añadir el vaso de vino blanco.
 Verter esto sobre el redondo. Dejar que se evapore un poco y cubrir de agua. Añadir dos granos de pimienta, la patata pelada
 y una hoja de laurel. Rectificar el punto de sal o añadir una pastilla de caldo de pollo, cerrar la olla y 40 minutos en la posición 2.
 }
-\newline
+\dline
 \step{4.}{
 Cuando haya terminado la cocción, sacar el redondo. Pasar la salsa. Dejar el redondo enfriar y cortarlo en lonchar finas.
 Cubrir con la salsa.
