--- a/entrantes/alitaspollo.tex
+++ b/entrantes/alitaspollo.tex
@@ -22,9 +22,11 @@
 \step{1.}{
 Freír las alas hasta que estén
 doradas y reservar.}
+\dline
 \step{2.}{
 En ese aceite se fríen los ajos y cuando empiecen a
 dorarse se aparta la sartén del fuego.}
+\dline
 \step{3.}{
 Agregamos
 el vino con el vinagre y se vuelve a poner
