--- a/legumbres/lentejas.tex
+++ b/legumbres/lentejas.tex
@@ -27,14 +27,17 @@
 \step{1.}{
 Se pone todo en una cazuela (excepto las patatas) en crudo.
 }
+\dline
 \step{2.}{
 Dejar cocer las lentejas aproximadamente una hora.
 Se pone a cocer a fuego lento hasta que estén tiernas
 añadiendole agua fría siempre que haga falta.
 }
+\dline
 \step{3.}{
 Echar las patatas cortadas en daditos y dejar aproximadamente otros 20 minutos.
 }
+\dline
 \step{4.}{
 Si quedan caldosas se le puede
 añadir una cucharadita de pan rallado
