--- a/platosunicos/patatascostillas.tex
+++ b/platosunicos/patatascostillas.tex
@@ -24,12 +24,15 @@
 \step{1.}{
 Pochar la cebolla, el pimiento y el ajo partido en trocitos.
 }
+\dline
 \step{2.}{
 Añadimos las costillas y las rehogamos.
 }
+\dline
 \step{3.}{
 Añadimos un majado de ajo, perejil y vino blanco.Dejamos evaporar un poco y añadimos las patatas cortadas.
 }
+\dline
 \step{4.}{
 Cubrimos de agua y dejamos cocer hasta que las costillas esten tiernas (aproximadamente 40 minutos/1 hora).
 }
