--- a/verduras/potajegarbanzos.tex
+++ b/verduras/potajegarbanzos.tex
@@ -22,10 +22,12 @@ Raciones: 4 ó 5 personas
 Pochar la cebolla, el ajo y una vez pochado añadir el tomate rallado y una cucharadita de pimentón.
 Rehogar 10 minutos.
 }
+\dline
 \step{2.}{
 Añadir los garbanzos (previamente remojados desde la noche anterior) y cubrir con agua.
 Añadir la sal y dejar cocer en olla a presión durante 40 minutos.
 }
+\dline
 \step{3.}{
 Abrir la olla, añadir las espinacas y los 2 huevos cocidos picados y dejar cocer unos 5 minutos
 }
